--- a/lab6/lab3/lab6.csproj
+++ b/lab6/lab3/lab6.csproj
@@ -10,4 +10,8 @@
     <StartupObject />
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
